--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx3G
 	loader_version=0.11.1
 
 # Mod Properties
-	mod_version = v7.1
+	mod_version = v1.0
 	maven_group = bleach.hack
-	archives_base_name = bigrat
+	archives_base_name = monsterrat
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
