--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,35 +9,16 @@ on:
 
 jobs:
   build:
-
-    runs-on: macos-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: BigRat-v7.1-MacOS
-        path: build/libs/bigrat-v7.1.jar
-
-  build2:
-
     runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 15
+      uses: actions/setup-java@v2
       with:
-        java-version: 1.8
+        distribution: 'adopt'
+        java-version: '15'
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
@@ -45,5 +26,5 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: BigRat-v7.1-Windows
-        path: build/libs/bigrat-v7.1.jar
+        name: monsterrat
+        path: build/libs/monsterrat-v1.0.jar
